# purplewallet

./: .gitignore  Jenkinsfile  Makefile  README.md  go.mod  go.sum
client/: Makefile
client/purple-cli/: CMakeLists.txt  Makefile
client/purple-cli/includes/: config.hpp  network.hpp  purple.hpp  utils.h
client/purple-cli/src/: Untitled-1  config.cpp  main.cpp  network.cpp  purple.cpp  utils.cpp
cmd/purplewallet/: config.go  jwt.go  main.go  router.go
doc/: sql.mwb  sql.mwb.bak
doc/uml/: addPurchase.puml
exemples/: config.yaml.example
internal/config/: config.go
internal/controllers/: purchase.go  user.go  wallet.go
internal/database/: database.go
internal/models/: category.go  log.go  purchase.go  transaction.go  user.go  wallet.go
internal/serializable/: userInformations.go  userbalance.go  userwallets.go  walletbalance.go
test/: main_test.go
